After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795422 - pipeline: Properly error out when linking fails
pipeline: Properly error out when linking fails
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
unspecified
Other All
: Normal normal
: 1.14.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-04-20 21:52 UTC by Thibault Saunier
Modified: 2018-05-14 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pipeline: Properly error out when linking fails (6.14 KB, patch)
2018-04-20 21:52 UTC, Thibault Saunier
committed Details | Review

Description Thibault Saunier 2018-04-20 21:52:13 UTC
See commit message.
Comment 1 Thibault Saunier 2018-04-20 21:52:18 UTC
Created attachment 371182 [details] [review]
pipeline: Properly error out when linking fails

In the rendering case we were getting random issues and often the
pipeline was not be able to preroll as some pad were not linked inside
encodebin.
Comment 2 Thibault Saunier 2018-04-20 22:26:06 UTC
Attachment 371182 [details] pushed as 3be03c1 - pipeline: Properly error out when linking fails